--- a/resources/views/components/navbar.edge
+++ b/resources/views/components/navbar.edge
@@ -1,20 +1,20 @@
-<nav class="flex justify-between items-center bg-red-600 h-10">
-    <ul class="flex justify-between w-40">
-        <li class="ml">
-            <a href="{{ route('home') }}">
+<nav class="flex justify-between items-center h-10 bg-white rounded mt-5 py-6 px-5 border-2">
+    <ul class="flex justify-between w-44">
+        <li>
+            <a href="{{ route('home') }}" class="text-lg text-lien hover:text-hover">
                 Accueil
             </a>
         </li>
         @if(auth.user.admin === 1)
         <li>
-            <a href="{{ route('dashboard') }}">
+            <a href="{{ route('dashboard') }}" class="text-lg text-gray-500 hover:text-hover">
                 Dashboard
             </a>
         </li>
         @endif
     </ul>
 
-    <a href="{{ route('logout') }}">
+    <a href="{{ route('logout') }}" class="text-lg text-lien hover:text-hover">
         Déconnexion
     </a>
     
