--- a/resources/views/auth/login.edge
+++ b/resources/views/auth/login.edge
@@ -2,21 +2,21 @@
 
 @section('body')
 <section class="flex flex-col justify-center items-center h-screen">
-  <div class="h w-full max-w-md bg-white shadow-md rounded border-4 border-border px-8 pt-10 pb-10 mb-4"">
-    <p class="text-base">Platforme profs / éleves - <span class="font-semibold">Maghin</span></p>
-    <h1 class="text-3xl font-bold text-gray-700 pt-1">Connexion</h1>
+  <div class="h w-full max-w-md bg-second_background shadow-md rounded border-4 border-border px-8 pt-10 pb-10 mb-4"">
+    <p class="text-base text-title_text">Platforme profs / éleves - <span class="font-semibold">Maghin</span></p>
+    <h1 class="text-3xl font-bold text-lien pt-1">Connexion</h1>
     <form class="py-4" action="" method="post">
       <div class="mb-4">
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
+        <label class="block text-title_text text-sm font-bold mb-2" for="username">
           Email
         </label>
-        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" name="email" id="username" type="email" placeholder="Username">
+        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-title_text leading-tight focus:outline-none focus:shadow-outline" name="email" id="username" type="email" placeholder="Username">
       </div>
       <div class="mb-6">
-        <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
+        <label class="block text-title_text text-sm font-bold mb-2" for="password">
           Mot de passe
         </label>
-        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" name="password" type="password" placeholder="******************">
+        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-title_text mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" name="password" type="password" placeholder="******************">
         <!-- 
           <p class="text-red-500 text-xs italic">Veuillez insérer un mot de passe.</p>
         -->
@@ -29,13 +29,13 @@
           Mot de passe oublier?
         </a>
       </div>
-      <p class="text-sm">
+      <p class="text-sm text-title_text">
         Tu n'as pas de compte?
         <a class="inline-block align-baseline font-bold text-sm text-lien hover:text-hover" href="{{ route('registration') }}">Commence ici</a>
       </p>
     </form>
   </div>
-  <p class="text-center text-gray-500 text-xs">
+  <p class="text-center text-paragraphe text-xs">
     &copy;2023 Julien Jacobs. Tout droit réservé.
   </p>
 </section>
