--- a/resources/views/pannel/create.edge
+++ b/resources/views/pannel/create.edge
@@ -1,7 +1,9 @@
 @layout('layout')
 
 @section('body')
-<h2>Ajouter un cour</h2>
+@!component('components/navbar')
+
+<h2 class="text-2xl text-title_text font-title_text mt-5">Ajouter un cour</h2>
 
 @include('pannel/form')
 @endsection
