--- a/resources/views/components/navbar.edge
+++ b/resources/views/components/navbar.edge
@@ -1,23 +1,31 @@
-<nav class="flex justify-between items-end h-14 mt-5 py-6 ">
+<nav class="flex justify-between items-end mt-4 pb-5 border-b-2">
     <a href="{{ route('home') }}" class="text-4xl font-title_text text-special">Maghin</a>
     
-    <pannel class="flex items-center    ">
+    <pannel class="flex items-center">
         @if(auth.user.admin === 1)
         <a href="{{ route('dashboard') }}" class="flex items-center mr-5">
-            <p class="text-lg font-paragraphe text-title_text hover:text-hover mr-1">
-                Bienvenue <span class="font-title_text text-lien">{{ auth.user.username }}</span>
+            <p class="text-lg font-second_text text-title_text hover:text-hover mr-1">
+                Bienvenue <span class="font-title_text text-hover">{{ auth.user.username }}</span>
             </p>
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-2 text-special">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-2 text-special mr-5">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M15.362 5.214A8.252 8.252 0 0112 21 8.25 8.25 0 016.038 7.048 8.287 8.287 0 009 9.6a8.983 8.983 0 013.361-6.867 8.21 8.21 0 003 2.48z" />
                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 18a3.75 3.75 0 00.495-7.467 5.99 5.99 0 00-1.925 3.546 5.974 5.974 0 01-2.133-1A3.75 3.75 0 0012 18z" />
             </svg>
         </a>
+        @else
+        <p class="text-lg font-paragraphe text-title_text hover:text-hove">
+            Bienvenue <span class="font-title_text text-hover">{{ auth.user.username }}</span>
+        </p>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-2 text-special mr-5">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15.362 5.214A8.252 8.252 0 0112 21 8.25 8.25 0 016.038 7.048 8.287 8.287 0 009 9.6a8.983 8.983 0 013.361-6.867 8.21 8.21 0 003 2.48z" />
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 18a3.75 3.75 0 00.495-7.467 5.99 5.99 0 00-1.925 3.546 5.974 5.974 0 01-2.133-1A3.75 3.75 0 0012 18z" />
+        </svg>
         @endif
 
         <a href="{{ route('logout') }}" class="text-base">
-            <button class="bg-button hover:bg-hover text-title_text hover:text-background font-bold py-2 px-3 rounded focus:outline-none focus:shadow-outline">
-                Déconnexion
-            </button>
+            @!component('components/button',{
+                title: 'Déconnexion',
+            })
         </a>  
     </pannel> 
 </nav>
