--- a/resources/views/pannel/form.edge
+++ b/resources/views/pannel/form.edge
@@ -1,24 +1,31 @@
-<form action="" method="post" enctype="multipart/form-data">
+<form action="" method="post" enctype="multipart/form-data" class="border-2 border-border rounded bg-second_background py-5 px-5 mt-2">
+    <section class="flex justify-center gap-5">
+        <div>
+            @!component('components/input', {
+                label: 'Titre',
+                name: 'title',
+                value: cour.title,
+                placeholder: 'Titre'
+            })
+        </div>
+        <div>
+            @!component('components/input', {
+                label: 'Categorie',
+                name: 'categoryId',
+                value: cour.categoryId,
+                options: categories.reduce((acc, c) => ({ ...acc, [c.id]: c.name }), {})
+            })
+            <a href="{{ route('categories.create') }}">Ajouter une categorie</a>
+        </div>
+    </section>
     <div>
-        @!component('components/input', {
-            label: 'Titre',
-            name: 'title',
-            value: cour.title,
-        })
-    </div>
-    <div>
+        @if(cour.file)
+          <p src="upload/{{ cour.file }}">{{ cour.file }}</p>
+        @end
         @!component('components/input', {
             label: 'Fichier PDF',
             name: 'pdf_file',
-            type: 'file'
-        })
-    </div>
-    <div>
-        @!component('components/input', {
-            label: 'Categorie',
-            name: 'categoryId',
-            value: cour.categoryId,
-            options: categories.reduce((acc, c) => ({ ...acc, [c.id]: c.name }), {})
+            type: 'file',
         })
     </div>
     <button>Sauvegarder</button>
