--- a/resources/views/pannel/index.edge
+++ b/resources/views/pannel/index.edge
@@ -4,48 +4,55 @@
 @!component('components/navbar')
 
 <main class="container mt-5">
-    <section class="flex items-end">
+    <section class="flex items-center">
         <h2 class="text-2xl font-title_text text-title_text mr-5">Cours</h2>
         @if(auth.user.admin === 1)
-        <a href="{{ route('cours.create') }}" class="text-lg text-lien font-second_text hover:underline hover:text-hover">Ajouter</a>
+        <a href="{{ route('cours.create') }}">
+            @!component('components/button', {
+                title: 'Ajouter',
+            })
+        </a>
         @end
     </section>
-
-    <section class="bg-second_background border-2 border-border rounded py-5 px-5 mt-2">
-        @each(cour in cours)
-        <card>
-            @if(auth.user.admin === 1)
-            <a href="#">{{ cour.title }}</a>
-            @else
-            <p>{{ cour.title }}</p>
+    <section class="flex flex-col gap-10 mt-3">
+        @each(categorie in categories)
+        <menu>
+            <hgroup class="text-xl font-title_text text-lien ">{{ categorie.name }}</hgroup>
+            <section class="mt-4 flex flex-wrap gap-8">
+            @each(cour in cours)
+                @if(cour.category_id === categorie.id)
+                    @if(auth.user.admin === 1)
+                    <article class="bg-second_background border-2 border-border rounded flex flex-col py-5 px-5 gap-3">
+                        <a href="upload/{{ cour.file }}" download class="flex items-center gap-2">
+                            <h3 class="text-lg text-title_text font-second_text">{{ cour.title }}</h3>
+                        </a>
+                                
+                        <div class="flex justify-between">
+                            <a href="{{ route('cours.show', {id: cour.id}) }}" class="flex text-paragraphe font-second_text hover:text-lien ease-out duration-300">
+                                <div class="flex gap-1">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6 stroke-2 ">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
+                                    </svg>
+                                </div>
+                            </a>
+                            <form action="{{ route('cours.show', {id: cour.id}) }}?_method=DELETE" method="POST">
+                                <button class="flex gap-1 text-paragraphe font-second_text hover:text-lien ease-out duration-300">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6 stroke-2">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 7.5l-.625 10.632a2.25 2.25 0 01-2.247 2.118H6.622a2.25 2.25 0 01-2.247-2.118L3.75 7.5m6 4.125l2.25 2.25m0 0l2.25 2.25M12 13.875l2.25-2.25M12 13.875l-2.25 2.25M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125z" />
+                                    </svg>
+                                </button>
+                            </form>
+                        </div>
+                    </article>
+                    @else
+                    <p class="w-1/6 flex justify-center bg-second_background border-2 border-border rounded py-5 px-5 text-xl text-title_text font-second_text hover:text-lien ease-in-out duration-300">{{ cour.title }}</p>
+                    @end
+                @end
+                
             @end
-                    
-            @if(auth.user.admin === 1)
-            <form action="{{ route('cours.show', {id: cour.id}) }}?_method=DELETE" method="POST">
-                <button>
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 7.5l-.625 10.632a2.25 2.25 0 01-2.247 2.118H6.622a2.25 2.25 0 01-2.247-2.118L3.75 7.5m6 4.125l2.25 2.25m0 0l2.25 2.25M12 13.875l2.25-2.25M12 13.875l-2.25 2.25M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125z" />
-                </svg>
-                </button>
-            </form>
-            <a href="{{ route('cours.show', {id: cour.id}) }}">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
-                </a>
-            </form>
-            @end
-        </card>
+            </section>
+        </menu>
         @end
-
-        <nav>
-            <ul>
-                @each(anchor in cours.getUrlsForRange(1, cours.lastPage))
-                <li>
-                    <a href="{{ anchor.url }}">{{ anchor.page }}</a>
-                </li>
-                @endeach
-            </ul>
-        </nav>
     </section>
 </main>
 
