--- a/resources/views/components/input.edge
+++ b/resources/views/components/input.edge
@@ -1,31 +1,40 @@
-    <label class="block text-title_text text-base font-bold mb-2" for="{{ name }}">{{ label }}</label>
-    @if(options)
-      <select name="{{ name }}" id="{{ name }}" class="shadow appearance-none border rounded w-full py-2 px-3 text-lien font-second_text leading-tight focus:outline-none focus:shadow-outline {{ flashMessages.has(`errors.${name}`) ? 'is-valid' : ''}} ">
-        @each(key in Object.keys(options))
-          <option value="{{ key }}" {{ flashMessages.get('name') || value == key ? 'selected' : '' }}>{{ options[key] }}</option>
-        @end
-      </select>
-    @elseif(type === 'file')
-      <input 
-        class="shadow appearance-none w-full text-lien font-second_text leading-tight focus:outline-none focus:shadow-outline {{ flashMessages.has(`errors.${name}`) ? 'is-valid' : ''}}" 
-        type="{{ type }}" 
-        id="{{ name }}" 
-        name="{{ name }}" 
-        value="{{ flashMessages.get('name') || value || '' }}"
-        placeholder="{{placeholder}}"
-      />
-    @else
-      <input 
-        class="shadow appearance-none border rounded w-full py-2 px-3 text-lien font-second_text leading-tight focus:outline-none focus:shadow-outline {{ flashMessages.has(`errors.${name}`) ? 'is-valid' : ''}}" 
-        type="{{ type || 'text' }}" 
-        id="{{ name }}" 
-        name="{{ name }}" 
-        value="{{ flashMessages.get('name') || value || '' }}"
-        placeholder="{{placeholder}}"
-      />
+<label class="block text-title_text text-base font-bold mb-2" for="{{ name }}">{{ label }}</label>
+@if(options)
+  <select name="{{ name }}" id="{{ name }}" class="shadow appearance-none border rounded w-full py-2 px-3 text-lien font-second_text leading-tight focus:outline-none focus:shadow-outline {{ flashMessages.has(`errors.${name}`) ? 'is-valid' : ''}} ">
+    @each(key in Object.keys(options))
+      <option value="{{ key }}" {{ flashMessages.get('name') || value == key ? 'selected' : '' }}>{{ options[key] }}</option>
     @end
-    @if(flashMessages.has(`errors.${name}`))
-      <div>
-        {{ flashMessages.get(`erros.${name}`) }}
-      </div>
-    @end
+  </select>
+@elseif(type === 'file')
+  <input 
+    class="shadow appearance-none w-full text-lien font-second_text leading-tight focus:outline-none focus:shadow-outline {{ flashMessages.has(`errors.${name}`) ? 'is-valid' : ''}}" 
+    type="{{ type }}" 
+    id="{{ name }}" 
+    name="{{ name }}" 
+    value="{{ flashMessages.get('name') || value || '' }}"
+    placeholder="{{placeholder}}"
+    required
+  />
+@else
+  <input 
+    class="shadow appearance-none border rounded w-full py-2 px-3 text-lien font-second_text leading-tight focus:outline-none focus:shadow-outline {{ flashMessages.has(`errors.${name}`) ? 'is-valid' : ''}}" 
+    type="{{ type || 'text' }}" 
+    id="{{ name }}" 
+    name="{{ name }}" 
+    value="{{ flashMessages.get('name') || value || '' }}"
+    placeholder="{{placeholder}}"
+    required
+  />
+@end
+
+@if(flashMessages.has(`errors.${name}`) && type === 'email' )
+  <div>
+    <p class="text-red-400 font-semibold text-sm">Email deja existant</p>
+  </div>
+@end
+
+@if(flashMessages.has(`errors.${name}`) && type === 'password' )
+  <div>
+    <p class="text-red-400 font-semibold text-sm">Minimimum 8 caractere</p>
+  </div>
+@end
