--- a/resources/views/pannel/index.edge
+++ b/resources/views/pannel/index.edge
@@ -32,14 +32,14 @@
     <section class="flex flex-col gap-10 mt-3">
         @each(categorie in categories)
         <menu>
-            <hgroup class="text-xl font-title_text text-lien ">{{ categorie.name }}</hgroup>
+            <hgroup class="text-xl font-title_text text-lien ">{{ categorie.name.charAt(0).toUpperCase() + categorie.name.slice(1) }}</hgroup>
             <section class="mt-4 flex flex-wrap gap-8">
             @each(cour in cours)
                 @if(cour.categoryId === categorie.id)
                     @if(auth.user.admin === 1)
                     <article class="bg-second_background border-2 border-border rounded flex flex-col py-5 px-5 gap-3">
                         <a href="{{ cour.file }}" download class="flex items-center gap-2">
-                            <h3 class="text-lg text-title_text font-second_text">{{ cour.title }}</h3>
+                            <h3 class="text-lg text-title_text font-second_text">{{ cour.title.charAt(0).toUpperCase() + cour.title.slice(1) }}</h3>
                         </a>
                                 
                         <div class="flex justify-between">
