--- a/resources/views/pannel/show.edge
+++ b/resources/views/pannel/show.edge
@@ -1,7 +1,7 @@
 @layout('layout')
 
 @section('body')
-<h2>Modifier {{ cour.title }}</h2>
-
+@!component('components/navbar')
+<h2 class="text-2xl text-title_text font-title_text mt-5">Modifier {{ cour.title }}</h2>
 @include('pannel/form')
 @endsection
