--- a/resources/views/pannel/index.edge
+++ b/resources/views/pannel/index.edge
@@ -38,7 +38,7 @@
                 @if(cour.categoryId === categorie.id)
                     @if(auth.user.admin === 1)
                     <article class="bg-second_background border-2 border-border rounded flex flex-col py-5 px-5 gap-3">
-                        <a href="{{ cour.file }}" download class="flex items-center gap-2">
+                        <a href="{{ route('cours.upload', {id: cour.file}) }}" download class="flex items-center gap-2">
                             <h3 class="text-lg text-title_text font-second_text">{{ cour.title.charAt(0).toUpperCase() + cour.title.slice(1) }}</h3>
                         </a>
                                 
@@ -60,7 +60,11 @@
                         </div>
                     </article>
                     @else
-                    <p class="w-1/6 flex justify-center bg-second_background border-2 border-border rounded py-5 px-5 text-xl text-title_text font-second_text hover:text-lien ease-in-out duration-300">{{ cour.title }}</p>
+                    <a href="{{ route('cours.upload', {id: cour.file}) }}" download class="flex items-center gap-2">
+                        <h3 class="flex justify-center bg-second_background border-2 border-border rounded py-5 px-5 text-xl text-title_text font-second_text hover:text-lien ease-in-out duration-300">
+                            {{ cour.title.charAt(0).toUpperCase() + cour.title.slice(1) }}
+                        </h3>
+                    </a>
                     @end
                 @end
             @end
