Mise en place du design

--- a/resources/views/auth/registration.edge
+++ b/resources/views/auth/registration.edge
@@ -4,7 +4,7 @@
 <section class="flex flex-col justify-center items-center h-screen">
   <div class="h w-full max-w-md bg-second_background shadow-md rounded border-4 border-border px-8 pt-10 pb-10 mb-4"">
     <p class="text-base text-title_text">Platforme profs / éleves - <span class="font-semibold text-special">Maghin</span></p>
-    <h1 class="text-3xl font-bold text-lien pt-1">Inscription</h1>
+    <h1 class="text-3xl font-bold text-title_text pt-1">Inscription</h1>
     <form class="py-4" action="" method="post">
       <div class="mb-4">
         @!component('components/input', {
