--- a/resources/views/components/navbar_v2.edge
+++ b/resources/views/components/navbar_v2.edge
@@ -1,15 +1,15 @@
 <nav class="flex justify-between items-end mt-4 pb-5 border-b-2">
     <div class="flex items-end flex-row gap-5">
         <a href="{{ route('home') }}" class="text-4xl font-title_text text-special">Maghin</a>
-        <a href="{{ route('pics') }}" class="text-xl font-title_text text-lien hover:text-hover">Photos</a>
-        <a href="{{ route('pannel') }}" class="text-xl font-title_text text-lien hover:text-hover">Cours</a>
+        <a href="{{ route('pics') }}" class="text-xl font-title_text text-hover hover:text-special">Photos</a>
+        <a href="{{ route('pannel') }}" class="text-xl font-title_text text-hover hover:text-special">Cours</a>
     </div>
     
     <pannel class="flex items-center">
         @if(auth.user.admin === 1)
         <a href="{{ route('dashboard') }}" class="flex items-center mr-5">
-            <p class="text-lg font-second_text text-title_text hover:text-hover mr-1">
-                Bienvenue <span class="font-title_text text-hover">{{ auth.user.username }}</span>
+            <p class="text-lg font-second_text text-hover hover:text-hover mr-1">
+                Bienvenue <span class="font-title_text text-special">{{ auth.user.username }}</span>
             </p>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-2 text-special mr-5">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M15.362 5.214A8.252 8.252 0 0112 21 8.25 8.25 0 016.038 7.048 8.287 8.287 0 009 9.6a8.983 8.983 0 013.361-6.867 8.21 8.21 0 003 2.48z" />
