--- a/resources/views/pics/create.edge
+++ b/resources/views/pics/create.edge
@@ -3,7 +3,8 @@
 @section('body')
 <main class="container w-auto">
     @!component('components/navbar')
-    <h2 class="text-2xl text-title_text font-title_text mt-5">Modifier {{ cour.title }}</h2>
-    @include('pannel/form')
+
+    <h2 class="text-2xl text-title_text font-title_text mt-5">Ajouter une photos</h2>
+    @include('pics/form')
 </main>
 @endsection
