--- a/resources/views/pannel/create.edge
+++ b/resources/views/pannel/create.edge
@@ -1,9 +1,13 @@
 @layout('layout')
 
 @section('body')
-@!component('components/navbar')
+<div class="relative flex justify-center">
+    <svg xmlns='http://www.w3.org/2000/svg' class="bg-gradient-to-b from-special_background ..." width='100%' height='100%' viewBox='0 0 1600 800'></svg>
+    <main class="container mx-auto fixed top-0">
+        @!component('components/navbar_v2')
 
-<h2 class="text-2xl text-title_text font-title_text mt-5">Ajouter un cour</h2>
-@include('pannel/form')
-
+        <h2 class="text-2xl text-title_text font-title_text mt-5">Ajouter un cour</h2>
+        @include('pannel/form')
+    </main>
+</div>
 @endsection
