--- a/resources/views/pannel/index.edge
+++ b/resources/views/pannel/index.edge
@@ -1,78 +1,92 @@
 @layout('layout')
 
 @section('body')
-<main class="container mx-auto">
-    @!component('components/navbar')
-    <section class="mt-5">
-        <header class="flex items-center justify-between bg-special_background py-2 px-3 border-2 rounded">
-            <div class="flex items-center">
-                <h2 class="text-2xl font-title_text text-title_text mr-5">Cours</h2>
-                @if(auth.user.admin === 1)
-                <a href="{{ route('cours.create') }}">
-                    @!component('components/button', {
-                        title: 'Ajouter',
-                    })
-                </a>
-                @end
-            </div>
-            <form action="{{ route('home') }}" method="get" class="w-1/4 flex flex-row justify-between gap-2">
-                <input 
-                    class="w-full shadow appearance-none border rounded py-2 px-3 text-lien font-second_text leading-tight focus:outline-none focus:shadow-outline {{ flashMessages.has(`errors.${name}`) ? 'is-valid' : ''}}" 
-                    type="text" id="pattern" name="pattern" placeholder="Enduisage ..."
-                />
-                <button type="submit" class="bg-button py-2 px-3 rounded hover:bg-special ease-out duration-300">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#eeeff1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <circle cx="11" cy="11" r="8"></circle>
-                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-                    </svg>
-                </button>
-            </form>
+<div class="relative flex justify-center">
+    <svg xmlns='http://www.w3.org/2000/svg' class="bg-gradient-to-b from-special_background ..." width='100%' height='100%' viewBox='0 0 1600 800'></svg>
+    <main class="container mx-auto fixed top-0">
+        @!component('components/navbar_v2')
+        <header class="relative flex justify-between items-center py-10">
+            <section class="w-1/2 flex flex-col gap-3">
+                <h1 class="text-6xl font-title_text text-special">Maghin</h1>
+                <h2 class="text-3xl font-second_text text-title_text mb-5">Etablissement mixte d’enseignement secondaire spécialisé</h2>
+                <section class="flex gap-5 items-center">
+                    <a href=""><p class="text-lg text-lien underline font-second_text hover:text-hover ease-out duration-300">Site de l'etablissement</p></a>
+                </section>
+            </section>
+            <aside class="w-1/2">
+                @!component('components/aside')
+            </aside>
         </header>
+        <section class="mt-5">
+            <header class="flex items-center justify-between bg-special_background py-2 px-3 border-2 border-border rounded">
+                <div class="flex items-center">
+                    <h2 class="text-2xl font-title_text text-title_text mr-5">Cours</h2>
+                    @if(auth.user.admin === 1)
+                    <a href="{{ route('cours.create') }}">
+                        @!component('components/button', {
+                            title: 'Ajouter',
+                        })
+                    </a>
+                    @end
+                </div>
+                <form action="{{ route('home') }}" method="get" class="w-1/4 flex flex-row justify-between gap-2">
+                    <input 
+                        class="w-full shadow appearance-none border rounded py-2 px-3 text-lien font-second_text leading-tight focus:outline-none focus:shadow-outline {{ flashMessages.has(`errors.${name}`) ? 'is-valid' : ''}}" 
+                        type="text" id="pattern" name="pattern" placeholder="Enduisage ..."
+                    />
+                    <button type="submit" class="bg-button py-2 px-3 rounded hover:bg-special ease-out duration-300">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#eeeff1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="11" cy="11" r="8"></circle>
+                            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                        </svg>
+                    </button>
+                </form>
+            </header>
 
-        <section class="flex flex-col gap-10 mt-3">
-            @each(categorie in categories)
-            <menu>
-                <hgroup class="text-xl font-title_text text-lien ">{{ categorie.name.charAt(0).toUpperCase() + categorie.name.slice(1) }}</hgroup>
-                <section class="mt-4 flex flex-wrap gap-8">
-                @each(cour in cours)
-                    @if(cour.categoryId === categorie.id)
-                        @if(auth.user.admin === 1)
-                        <article class="bg-second_background border-2 border-border rounded flex flex-col py-5 px-5 gap-3">
-                            <a href="{{ route('cours.upload', {id: cour.file}) }}" download class="flex items-center gap-2">
-                                <h3 class="text-lg text-title_text font-second_text">{{ cour.title.charAt(0).toUpperCase() + cour.title.slice(1) }}</h3>
-                            </a>
-                                    
-                            <div class="flex justify-between">
-                                <a href="{{ route('cours.show', {id: cour.id}) }}" class="flex text-paragraphe font-second_text hover:text-lien ease-out duration-300">
-                                    <div class="flex gap-1">
-                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6 stroke-2 ">
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
-                                        </svg>
-                                    </div>
+            <section class="flex flex-col gap-10 mt-3">
+                @each(categorie in categories)
+                <menu>
+                    <hgroup class="text-xl font-title_text text-title_text ">{{ categorie.name.charAt(0).toUpperCase() + categorie.name.slice(1) }}</hgroup>
+                    <section class="mt-4 flex flex-wrap gap-8">
+                    @each(cour in cours)
+                        @if(cour.categoryId === categorie.id)
+                            @if(auth.user.admin === 1)
+                            <article class="bg-special_background border-2 border-border rounded flex flex-col py-5 px-5 gap-3">
+                                <a href="{{ route('cours.upload', {id: cour.file}) }}" download class="flex items-center gap-2">
+                                    <h3 class="text-lg text-title_text font-second_text">{{ cour.title.charAt(0).toUpperCase() + cour.title.slice(1) }}</h3>
                                 </a>
-                                <form action="{{ route('cours.show', {id: cour.id}) }}?_method=DELETE" method="POST">
-                                    <button class="flex gap-1 text-paragraphe font-second_text hover:text-lien ease-out duration-300">
-                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6 stroke-2">
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 7.5l-.625 10.632a2.25 2.25 0 01-2.247 2.118H6.622a2.25 2.25 0 01-2.247-2.118L3.75 7.5m6 4.125l2.25 2.25m0 0l2.25 2.25M12 13.875l2.25-2.25M12 13.875l-2.25 2.25M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125z" />
-                                        </svg>
-                                    </button>
-                                </form>
-                            </div>
-                        </article>
-                        @else
-                        <a href="{{ route('cours.upload', {id: cour.file}) }}" download class="flex items-center gap-2">
-                            <h3 class="flex justify-center bg-second_background border-2 border-border rounded py-5 px-5 text-xl text-title_text font-second_text hover:text-lien ease-in-out duration-300">
-                                {{ cour.title.charAt(0).toUpperCase() + cour.title.slice(1) }}
-                            </h3>
-                        </a>
+                                        
+                                <div class="flex justify-between">
+                                    <a href="{{ route('cours.show', {id: cour.id}) }}" class="flex text-paragraphe font-second_text hover:text-lien ease-out duration-300">
+                                        <div class="flex gap-1">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6 stroke-2 ">
+                                                <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
+                                            </svg>
+                                        </div>
+                                    </a>
+                                    <form action="{{ route('cours.show', {id: cour.id}) }}?_method=DELETE" method="POST">
+                                        <button class="flex gap-1 text-paragraphe font-second_text hover:text-lien ease-out duration-300">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6 stroke-2">
+                                                <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 7.5l-.625 10.632a2.25 2.25 0 01-2.247 2.118H6.622a2.25 2.25 0 01-2.247-2.118L3.75 7.5m6 4.125l2.25 2.25m0 0l2.25 2.25M12 13.875l2.25-2.25M12 13.875l-2.25 2.25M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125z" />
+                                            </svg>
+                                        </button>
+                                    </form>
+                                </div>
+                            </article>
+                            @else
+                            <a href="{{ route('cours.upload', {id: cour.file}) }}" download class="flex items-center gap-2">
+                                <h3 class="flex justify-center bg-second_background border-2 border-border rounded py-5 px-5 text-xl text-title_text font-second_text hover:text-lien ease-in-out duration-300">
+                                    {{ cour.title.charAt(0).toUpperCase() + cour.title.slice(1) }}
+                                </h3>
+                            </a>
+                            @end
                         @end
                     @end
+                    </section>
+                </menu>
                 @end
-                </section>
-            </menu>
-            @end
+            </section>
         </section>
-    </section>
-</main>
-
+    </main>
+</div>
 @endsection
