--- a/resources/views/pics/index.edge
+++ b/resources/views/pics/index.edge
@@ -1,8 +1,68 @@
 @layout('layout')
 
 @section('body')
-<main class="container mx-auto">
-    @!component('components/navbar')
-    <h2>Les photos</h2>
-</main>
-@end
+<div class="relative flex justify-center">
+    <svg xmlns='http://www.w3.org/2000/svg' class="bg-gradient-to-b from-special_background ..." width='100%' height='100%' viewBox='0 0 1600 800'></svg>
+    <main class="container mx-auto fixed top-0">
+        @!component('components/navbar_v2')
+        <section class="mt-5">
+            <header class="flex items-center justify-between bg-special_background py-2 px-3 border-2 border-border rounded">
+                <div class="flex items-center">
+                    <h2 class="text-2xl font-title_text text-title_text mr-5">Photos</h2>
+                    @if(auth.user.admin === 1)
+                    <a href="{{ route('pics.create') }}">
+                        @!component('components/button', {
+                            title: 'Ajouter',
+                        })
+                    </a>
+                    @end
+                </div>
+            </header>
+
+            <section class="flex flex-col gap-10 mt-3">
+                @each(categorie in categories_pic)
+                <menu>
+                    <hgroup class="text-xl font-title_text text-title_text ">{{ categorie.name.charAt(0).toUpperCase() + categorie.name.slice(1) }}</hgroup>
+                    <section class="mt-4 flex flex-wrap gap-8">
+                    @each(pic in pics)
+                        @if(pic.categorie_pics_id === categorie.id)
+                            @if(auth.user.admin === 1)
+                            <article class="bg-special_background border-2 border-border rounded flex flex-col py-5 px-5 gap-3">
+                                <a href="{{ route('pics.upload', {id: pic.file}) }}" download class="flex items-center gap-2">
+                                    <h3 class="text-lg text-title_text font-second_text">{{ pic.title.charAt(0).toUpperCase() + pic.title.slice(1) }}</h3>
+                                </a>
+                                        
+                                <div class="flex justify-between">
+                                    <a href="{{ route('pics.show', {id: pic.id}) }}" class="flex text-paragraphe font-second_text hover:text-lien ease-out duration-300">
+                                        <div class="flex gap-1">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6 stroke-2 ">
+                                                <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
+                                            </svg>
+                                        </div>
+                                    </a>
+                                    <form action="{{ route('pics.show', {id: pic.id}) }}?_method=DELETE" method="POST">
+                                        <button class="flex gap-1 text-paragraphe font-second_text hover:text-lien ease-out duration-300">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6 stroke-2">
+                                                <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 7.5l-.625 10.632a2.25 2.25 0 01-2.247 2.118H6.622a2.25 2.25 0 01-2.247-2.118L3.75 7.5m6 4.125l2.25 2.25m0 0l2.25 2.25M12 13.875l2.25-2.25M12 13.875l-2.25 2.25M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125z" />
+                                            </svg>
+                                        </button>
+                                    </form>
+                                </div>
+                            </article>
+                            @else
+                            <a href="{{ route('pics.upload', {id: pic.file}) }}" download class="flex items-center gap-2">
+                                <h3 class="flex justify-center bg-second_background border-2 border-border rounded py-5 px-5 text-xl text-title_text font-second_text hover:text-lien ease-in-out duration-300">
+                                    {{ pic.title.charAt(0).toUpperCase() + pic.title.slice(1) }}
+                                </h3>
+                            </a>
+                            @end
+                        @end
+                    @end
+                    </section>
+                </menu>
+                @end
+            </section>
+        </section>
+    </main>
+</div>
+@endsection
