--- a/resources/views/pics/form.edge
+++ b/resources/views/pics/form.edge
@@ -1,29 +1,30 @@
 <form action="" method="post" enctype="multipart/form-data" class="flex flex-col gap-5 w-1/2 border-2 border-border rounded bg-second_background py-5 px-5 mt-2">
-    {{--  <section>
+    <section>
         @!component('components/input', {
             label: 'Categorie',
-            name: 'categoryId',
-            value: pics.category_pics_id,
-            options: categories.reduce((acc, c) => ({ ...acc, [c.id]: c.name }), {})
+            name: 'categorie_pics_id',
+            value: pic.categorie_pics_id,
+            options: categorie_pics.reduce((acc, c) => ({ ...acc, [c.id]: c.name }), {})
         })
-    </section>  --}}
+        <a href="{{route('categories.create')}}">Ajouter une categorie</a>
+    </section>
 
     <section class="flex gap-5">
         <div>
             @!component('components/input', {
                 label: 'Photo',
-                name: 'pics_file',
+                name: 'pic_file',
                 type: 'file',
-                value: pics.thumbnail
+                value: pic.thumbnail
             })
-            <label for="pics_file" class="text-hover underline font-title_text">Choisir un fichier</label>
+            <label for="pic_file" class="text-hover underline font-title_text">Choisir un fichier</label>
         </div>
-         @if(pics.thumbnail)
-            <div src="upload/{{ pics.thumbnail }}">
+         @if(pic.thumbnail)
+            <div src="upload/{{ pic.thumbnail }}">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
                 </svg>
-                <p>{{ pics.thumbnail }}</p>
+                <p>{{ pic.thumbnail }}</p>
             </div>
         @end
     </section>
